<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AOKP.co (Donator)</string>
    <string name="action_exit">Quit</string>
    <string name="action_sitemenu">Site Menu</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_blog">Blog / News</string>
    <string name="action_learn">Learn / Help</string>
    <string name="action_reload">Refresh</string>
    <string name="action_donate">Donate</string>
    <string name="action_about">About</string>

</resources>
