<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_donate"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_donate"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_about"/>
                
    <item
        android:id="@+id/action_sitemenu"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_sitemenu"/>   
        
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_reload"/>
        
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
        
</menu>
